# FAST_LIO

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  ReadMe.md  package.xml
.github/: stale.yml
Log/: fast_lio_time_log_analysis.m  fast_lio_time_log_analysis.py  guide.md  plot.py
config/: avia.yaml  gdb_debug.yaml  hesai.yaml  horizon.yaml  marsim.yaml  mid360.yaml  mid360_cam.yaml  ouster64.yaml  rs32.yaml  rslidar.yaml  velody16.yaml  velodyne.yaml
doc/: Untitled Diagram.drawio
include/: Exp_mat.h  common_lib.h  matplotlibcpp.h  so3_math.h  use-ikfom.hpp
include/IKFoM_toolkit/esekfom/: esekfom.hpp  util.hpp
include/IKFoM_toolkit/mtk/: build_manifold.hpp  startIdx.hpp
include/IKFoM_toolkit/mtk/src/: SubManifold.hpp  mtkmath.hpp  vectview.hpp
include/IKFoM_toolkit/mtk/types/: S2.hpp  SOn.hpp  vect.hpp  wrapped_cv_mat.hpp
launch/: gdb_debug_example.launch  gdb_debug_example.launch.py  mapping.launch.py  mapping_avia.launch  mapping_avia_outdoor.launch  mapping_hesai.launch  mapping_horizon.launch  mapping_marsim.launch  mapping_mid360.launch  mapping_mid360_cam.launch  mapping_ouster64.launch  mapping_rs32.launch  mapping_rslidar.launch  mapping_velody16.launch  mapping_velodyne.launch  replay.launch  rtabmap.launch.py
msg/: Pose6D.msg  States.msg
rviz/: fastlio.rviz
rviz_cfg/: fastlio.rviz  loam_livox.rviz
src/: IMU_Processing.hpp  feature_extract.cpp  img_processing.txt  laserMapping.cpp  preprocess.cpp  preprocess.h
tools/: plot.py
